# tetrika

./: README.md  pyproject.toml
task1/: solution1.py
task2/: output.csv  solution2.py
task3/: solution3.py
tests/: test_solution1.py  test_solution2.py  test_solution3.py
tests/samples/: file_test_1.html  file_test_2.html  res1.html  res2.html
