[tool.poetry]
name = "tetrika-junior"
version = "0.1.0"
description = ""
authors = ["donbase <wikirustit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
wikipedia = "^1.4.0"
beautifulsoup4 = "^4.13.4"
pytest = "^8.3.5"
pytest-async = "^0.1.1"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
